# expenses-bot

./: .env-example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/bot/: __main__.py  bot.py  helpers.py  settings.py  states.py
src/bot/db/: database.py
src/bot/db/models/: __init__.py  categories.py  expenses.py  users.py
src/bot/middlewares/: auth.py
src/bot/models/: expenses.py
src/bot/services/: base.py  categories.py  expenses.py  users.py
src/bot/utils/: parsing.py
src/migrations/: env.py
src/migrations/versions/: 001_cfec3b3ceffc.py  002_24588099b7d7_add_balance.py  003_56b367e3d0fc_add_emoji_field.py
tests/: test_parsing.py
